kubernetes/cert-manager/network-policy.yaml
---
# Allow cert-manager components to communicate with each other
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: cert-manager
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cert-manager
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cert-manager

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

---
# Allow cert-manager controller and cainjector to reach Kubernetes API
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-apiserver
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            serviceName: kubernetes
            namespace: default

---
# Allow cert-manager to reach ACME servers (Let's Encrypt)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-acme-egress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: cert-manager
  egress:
    - toEntities:
        - world

---
# Allow kube-apiserver to call the cert-manager webhook
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-webhook-ingress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: webhook
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
